rs/macros/core/tests/snapshots/gservice__works_with_mixed_methods.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct InheritedServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for InheritedServiceExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 1u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (
                id,
                eid,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails::meta::find_id(
                            <BaseService as sails::meta::ServiceMeta>::METHODS,
                            "Foo",
                        );
                        ID
                    } => Some(false),
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &T::BASE_SERVICES[0usize],
                id,
            ) => {
                return <<BaseService as sails::gstd::services::Service>::Exposure as sails::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for InheritedServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for InheritedServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
#[allow(clippy::from_over_into)]
impl Into<BaseService> for InheritedServiceExposure<InheritedService> {
    fn into(self) -> BaseService {
        self.inner.into()
    }
}
impl InheritedServiceExposure<InheritedService> {
    #[export]
    pub fn own_first(&self) -> u32 {
        1
    }
    #[export(overrides = BaseService)]
    pub fn foo(&self) -> u32 {
        200
    }
    #[export]
    pub fn own_second(&self) -> u32 {
        2
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if id == <BaseService as sails::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails::meta::find_id(
                            <BaseService as sails::meta::ServiceMeta>::METHODS,
                            "Foo",
                        );
                        ID
                    } => {
                let request: inherited_service_meta::__FooParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.foo();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        inherited_service_meta::__FooParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                0u16,
            ) if id
                == <self::InheritedService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: inherited_service_meta::__OwnFirstParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.own_first();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        inherited_service_meta::__OwnFirstParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                1u16,
            ) if id
                == <self::InheritedService as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: inherited_service_meta::__OwnSecondParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.own_second();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<u32>() {
                    sails::gstd::encode_invocation_payload::<
                        inherited_service_meta::__OwnSecondParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::InheritedService as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseService = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::InheritedService as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseService = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            _ => None,
        }
    }
}
impl sails::gstd::services::Service for InheritedService {
    type Exposure = InheritedServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod inherited_service_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails::hash_fn!(query OwnFirst() -> u32));
        final_hash = final_hash.update(&sails::hash_fn!(query OwnSecond() -> u32));
        final_hash = final_hash
            .update(&<super::BaseService as sails::meta::Identifiable>::INTERFACE_ID.0);
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl sails::meta::Identifiable for super::InheritedService {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl sails::meta::ServiceMeta for super::InheritedService {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[
            sails::meta::BaseServiceMeta::new::<super::BaseService>("BaseService"),
        ];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "OwnFirst",
                entry_id: 0u16,
                hash: sails::hash_fn!(query OwnFirst() -> u32),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "OwnSecond",
                entry_id: 1u16,
                hash: sails::hash_fn!(query OwnSecond() -> u32),
                is_async: false,
            },
        ];
        const ASYNC: bool = <super::BaseService as sails::meta::ServiceMeta>::ASYNC;
    }
    const _: () = {
        let base_methods = <super::BaseService as sails::meta::ServiceMeta>::METHODS;
        if let Some(method) = sails::meta::find_method_data(base_methods, "Foo", None) {
            let base_name = method.name;
            if !sails::meta::bytes32_eq(
                &method.hash,
                &sails::hash_fn!("query" base_name, () -> u32),
            ) {
                core::panic!(
                    concat!("Override signature mismatch for method `", "Foo", "`")
                );
            }
        } else {
            core::panic!(concat!("Method `", "Foo", "` not found in base service"));
        }
    };
    sails::invocation_io!(
        pub struct __FooParams {}, interface_id = < super::BaseService as
        sails::meta::Identifiable > ::INTERFACE_ID, entry_id = { const ID : u16 =
        sails::meta::find_id(< super::BaseService as sails::meta::ServiceMeta >
        ::METHODS, "Foo",); ID },
    );
    sails::invocation_io!(
        pub struct __OwnFirstParams {}, interface_id = __INTERFACE_ID, entry_id = 0u16,
    );
    sails::invocation_io!(
        pub struct __OwnSecondParams {}, interface_id = __INTERFACE_ID, entry_id = 1u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {
        OwnFirst(__OwnFirstParams, u32),
        OwnSecond(__OwnSecondParams, u32),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
