rs/macros/core/tests/snapshots/gservice__works_with_overrides_on_generic_base_service.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct ChildServiceExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: MetadataStorage> sails_rs::gstd::services::Exposure
for ChildServiceExposure<ChildService<T>> {
    fn interface_id() -> sails_rs::meta::InterfaceId {
        <ChildService<T> as sails_rs::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails_rs::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !<ChildService<T> as sails_rs::meta::ServiceMeta>::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if id == <BaseService<T> as sails_rs::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails_rs::meta::find_id(
                            base_service_meta::__SERVICE_METHODS,
                            "Foo",
                        );
                        ID
                    } => Some(false),
            (
                id,
                eid,
            ) if sails_rs::meta::service_has_interface_id(
                &<ChildService<T> as sails_rs::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                return <<BaseService<
                    T,
                > as sails_rs::gstd::services::Service>::Exposure as sails_rs::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for ChildServiceExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for ChildServiceExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
#[allow(clippy::from_over_into)]
impl<T: MetadataStorage> Into<BaseService<T>> for ChildServiceExposure<ChildService<T>> {
    fn into(self) -> BaseService<T> {
        self.inner.into()
    }
}
impl<T: MetadataStorage> ChildServiceExposure<ChildService<T>> {
    #[export(overrides = BaseService<T>)]
    pub fn foo(&self) -> u32 {
        200
    }
    pub fn try_handle(
        mut self,
        interface_id: sails_rs::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails_rs::gstd::{InvocationIo, CommandReply};
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if id == <BaseService<T> as sails_rs::meta::Identifiable>::INTERFACE_ID
                && eid
                    == {
                        const ID: u16 = sails_rs::meta::find_id(
                            base_service_meta::__SERVICE_METHODS,
                            "Foo",
                        );
                        ID
                    } => {
                let request: child_service_meta::__FooParams = sails_rs::scale_codec::Decode::decode(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.foo();
                let value = 0u128;
                if !sails_rs::gstd::is_empty_tuple::<u32>() {
                    <child_service_meta::__FooParams as sails_rs::gstd::InvocationIo>::with_optimized_encode(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if sails_rs::meta::service_has_interface_id(
                &<self::ChildService<
                    T,
                > as sails_rs::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseService<T> = self.inner.into();
                return sails_rs::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails_rs::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails_rs::gstd::{InvocationIo, CommandReply};
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails_rs::meta::service_has_interface_id(
                &<self::ChildService<
                    T,
                > as sails_rs::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: BaseService<T> = self.inner.into();
                return sails_rs::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            _ => None,
        }
    }
}
impl<T: MetadataStorage> sails_rs::gstd::services::Service for ChildService<T> {
    type Exposure = ChildServiceExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod child_service_meta {
    use super::*;
    pub(crate) const __SERVICE_INTERFACE_ID: sails_rs::meta::InterfaceId = {
        let mut final_hash = sails_rs::keccak_const::Keccak256::new();
        final_hash = final_hash
            .update(&super::base_service_meta::__SERVICE_INTERFACE_ID.0);
        let hash = final_hash.finalize();
        sails_rs::meta::InterfaceId::from_bytes_32(hash)
    };
    pub(crate) const __SERVICE_METHODS: &'static [sails_rs::meta::MethodMetadata] = &[];
    impl<T: MetadataStorage> sails_rs::meta::Identifiable for super::ChildService<T> {
        const INTERFACE_ID: sails_rs::meta::InterfaceId = __SERVICE_INTERFACE_ID;
    }
    impl<T: MetadataStorage> sails_rs::meta::ServiceMeta for super::ChildService<T> {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails_rs::meta::BaseServiceMeta] = &[
            sails_rs::meta::BaseServiceMeta::new::<super::BaseService<T>>("BaseService"),
        ];
        const METHODS: &'static [sails_rs::meta::MethodMetadata] = __SERVICE_METHODS;
        const ASYNC: bool = <super::BaseService<
            T,
        > as sails_rs::meta::ServiceMeta>::ASYNC;
    }
    const _: () = {
        let base_methods = super::base_service_meta::__SERVICE_METHODS;
        if let Some(method) = sails_rs::meta::find_method_data(
            base_methods,
            "Foo",
            None,
        ) {
            let base_name = method.name;
            if !sails_rs::meta::bytes32_eq(
                &method.hash,
                &sails_rs::hash_fn!("query" base_name, () -> u32),
            ) {
                core::panic!(
                    concat!("Override signature mismatch for method `", "Foo", "`")
                );
            }
        } else {
            core::panic!(concat!("Method `", "Foo", "` not found in base service"));
        }
    };
    sails_rs::invocation_io!(
        pub struct __FooParams {}, interface_id =
        super::base_service_meta::__SERVICE_INTERFACE_ID, entry_id = { const ID : u16 =
        sails_rs::meta::find_id(super::base_service_meta::__SERVICE_METHODS, "Foo",); ID
        },
    );
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum CommandsMeta {}
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum QueriesMeta {}
    #[derive(sails_rs::TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
